--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# npm
+.npmrc
+
+# compiled
+dist
+
 # dependencies
-/node_modules
+node_modules
 /.pnp
 .pnp.js
 
